--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         body {
             /* Base dark background color */
             background-color: #071223; 
+            background-attachment: fixed; 
             
             /* Multiple radial gradients for floating "bubbles" */
             background-image: 
