--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            
+            min-width: 100vh;
+             min-height: 100vh;
             /* Pattern in subtle dark blue (Restored) */
             opacity: 0.15;
             z-index: 0;
