--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
             width: 100%;
             height: 100%;
             /* Pattern in subtle dark blue (Restored) */
-            background-image: url("data:image/svg+xml,%3Csvg width='60' height=100% viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23407BFF' fill-opacity='0.1'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zm0 17v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0 17v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0 17v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zM12 6v-4H10v4H6v2h4v4h2V8h4V6h-4zm0 17v-4H10v4H6v2h4v4h2v-4h4v-2h-4zm0 17v-4H10v4H6v2h4v4h2v-4h4v-2h-4zm0 17v-4H10v4H6v2h4v4h2v-4h4v-2h-4zM48 6v-4h-2v4h-4v2h4v4h2V8h4V6h-4zm0 17v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0 17v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0 17v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); 
             opacity: 0.15;
             z-index: 0;
             /* NEW: Subtle gold shadow to make pattern look like distant sparks/shimmer */
@@ -172,7 +171,7 @@
             <!-- Birthday Cake Icon REMOVED -->
 
             <h1 class="text-7xl md:text-9xl font-heroic text-zeus-gold leading-none mb-4 animate-pulseFast drop-shadow-lg [text-shadow:0_4px_6px_#0A1931,0_0_15px_#FACA16]"><!-- Dark Shadow/Gold Glow (Restored) -->
-                HAPPY BIRTHDAY!
+                HAPPY BIRTHDAY!🎂
             </h1>
             <p class="text-xl md:text-2xl font-marker text-celestial-blue mb-12 drop-shadow">A truly mythical gift awaits you...</p>
 
@@ -218,7 +217,7 @@
                 <a id="ticket-link-2" href="#" target="_blank" 
                    class="flex items-center justify-between p-4 bg-midnight-navy text-white rounded-xl shadow-lg hover:bg-shadow-dark transition duration-300 transform hover:scale-[1.02] border-b-4 border-shadow-dark">
                     <span class="font-semibold font-marker text-lg text-zeus-gold">Harry's Mythical Birthday Ticket!</span>
-                    <!-- UPDATED: Star Emoji -->
+                    <!-- UPDATED: Star Emoji --💕
                     <span class="text-2xl ml-2" role="img" aria-label="Star">⭐️</span>
                 </a>
 
@@ -233,7 +232,7 @@
             </div>
 
             <p class="text-sm text-center text-gray-600 mt-6 pt-4 border-t border-zeus-gold relative z-10">
-                Remember your training, save these tickets, and prepare for glory!
+                Remember your training, save these tickets, and prepare for glory!<br>Happy Birthday! - Alex and Kinga 💕
             </p>
         </div>
     </div>
@@ -243,7 +242,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             // --- CONSTANTS ---
-            const SECRET_PASSWORD = 'mythos'; // <<< SET YOUR PASSWORD HERE (UPDATED)
+            const SECRET_PASSWORD = 'mythos'; // 
 
             // --- HTML ELEMENTS ---
             const passwordGate = document.getElementById('password-gate');
