--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <!-- Ticket 1 Link (Albert) -->
                 <a id="ticket-link-1" href="#" target="_blank" 
                    class="flex items-center justify-between p-4 bg-midnight-navy text-white rounded-xl shadow-lg hover:bg-shadow-dark transition duration-300 transform hover:scale-[1.02] border-b-4 border-shadow-dark">
-                    <span class="font-semibold font-marker text-lg text-zeus-gold">Albert's Big Birthday Bolt!</span>
+                    <span class="font-semibold font-marker text-lg text-zeus-gold">Albert's Birthday Ticket!</span>
                     <!-- UPDATED: Star Emoji -->
                     <span class="text-2xl ml-2" role="img" aria-label="Star">⭐️</span>
                 </a>
@@ -216,8 +216,8 @@
                 <!-- Ticket 2 Link (Harry) -->
                 <a id="ticket-link-2" href="#" target="_blank" 
                    class="flex items-center justify-between p-4 bg-midnight-navy text-white rounded-xl shadow-lg hover:bg-shadow-dark transition duration-300 transform hover:scale-[1.02] border-b-4 border-shadow-dark">
-                    <span class="font-semibold font-marker text-lg text-zeus-gold">Harry's Mythical Birthday Ticket!</span>
-                    <!-- UPDATED: Star Emoji --💕
+                    <span class="font-semibold font-marker text-lg text-zeus-gold">Harry's Birthday Ticket!</span>
+                    <!-- UPDATED: Star Emoji --
                     <span class="text-2xl ml-2" role="img" aria-label="Star">⭐️</span>
                 </a>
 
