--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <a id="ticket-link-2" href="#" target="_blank" 
                    class="flex items-center justify-between p-4 bg-midnight-navy text-white rounded-xl shadow-lg hover:bg-shadow-dark transition duration-300 transform hover:scale-[1.02] border-b-4 border-shadow-dark">
                     <span class="font-semibold font-marker text-lg text-zeus-gold">Harry's Birthday Ticket!</span>
-                    <!-- UPDATED: Star Emoji --
+                    <!-- UPDATED: Star Emoji -->
                     <span class="text-2xl ml-2" role="img" aria-label="Star">⭐️</span>
                 </a>
 
