--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                     // Optional: Give a visual cue that the secret was found
                     giftTitle.classList.remove('text-midnight-navy');
                     giftTitle.classList.add('text-zeus-gold', 'text-shadow-lg', 'animate-rock');
-                    giftTitle.innerText = "A MIGHTY GIFT! (Bonus Found!)";
+                    giftTitle.innerText = "A MIGHTY GIFT! (Yaay George's coming too!)";
 
                 } else {
                     // If it's already shown, fire a small, celebratory burst
