--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>✨ Your Mythical Birthday Gift! ✨</title>
+    <title>Your Mythical Birthday Gift! ✨</title>
     <link rel="icon" type="image/x-icon" href="SD.png">
     <!-- Load Google Fonts for a Disney-esque feel --><link href="https://fonts.googleapis.com/css2?family=Bangers&family=Permanent+Marker&family=Luckiest+Guy&display=swap" rel="stylesheet">
     <!-- Load Tailwind CSS --><script src="https://cdn.tailwindcss.com"></script>
